# CVSpark

./: .gitignore  CMakeLists.txt  Info.h.in  main.cpp  main.hpp
Samples/: bg.txt
